document added to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 
 
 <div class="footer">
-  <p style="color:#0000006e">  You can use the <a href="admin"> admin </a> panel to manage the models, and also you can read the <a href="documentation"> documentation </a> to use the API services. </p>
+  <p style="color:#0000006e">  You can use the <a href="admin"> admin </a> panel to manage the models, and also you can read the <a href="https://gold-zodiac-6618.postman.co/workspace/Team-Workspace~cd678072-9970-4227-8244-65bf6b4f6c8e/collection/31197736-c8189cf9-c593-42a9-8b9b-ed17a9aa6d13?action=share&creator=31197736"> documentation </a> to use the API services. </p>
 </div>
 
 
